Rename insertion sort & some minor stylistic details

--- a/sort.html
+++ b/sort.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Algo</title>
     <style type="text/css">
      .wrapper {
@@ -40,8 +41,8 @@
       <h1>Algo</h1>
       <input type="button" value="Generate Random Values"
              onclick="stage.populate()">
-      <input type="button" value="Insert Sort"
-             onclick="stage.insertSort()">
+      <input type="button" value="Insertion Sort"
+             onclick="stage.insertionSort()">
       <input type="button" value="Selection Sort"
              onclick="stage.selectionSort()">
       <div id="whiteboard"></div>
