--- a/sort.html
+++ b/sort.html
@@ -45,6 +45,8 @@
              onclick="stage.insertionSort()">
       <input type="button" value="Selection Sort"
              onclick="stage.selectionSort()">
+      <input type="button" value="Merge Sort"
+             onclick="stage.mergeSort()">
       <div id="whiteboard"></div>
     </div>
     <script src="sort.js"></script>
